tests/test-files/parse-throw.txt
================================================================================
100 Malformed throw expression 
================================================================================

(package test-package)

(define f
  (throw)
  Unit)

--------------------------------------------------------------------------------

error: Malformed throw expression
  --> test:4:3
   |
 4 |    (throw)
   |     ^^^^^ expression expected

================================================================================
101 Malformed throw expression 
================================================================================

(package test-package)

(define f
  (throw a b)
  Unit)

--------------------------------------------------------------------------------

error: Malformed throw expression
  --> test:4:11
   |
 4 |    (throw a b)
   |             ^ unexpected trailing form

